# listme

./: .gitignore  README.md  SETUP.md  build.sh  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: go.yml
blame/: blame.go
go/src/: TODO.md  go.mod  go.sum  main.go
matcher/: matcher.go  matcher_test.go
pretty/: pretty.go
search/: search.go  search_test.go
src/: rememberme.py
src/listme/: _main.py  config.py  git_tools.py  parser.py
src/rememberme/: _main.py  config.py  git_tools.py  parser.py  rememberme.py
tests/: generic_code.py  test_parser.py
